[project]
authors = []
license = { text = "MIT" }
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
    "ruff>=0.14.4",
]
name = "langchain-monorepo"
version = "0.0.1"
description = "LangChain monorepo"
readme = "README.md"

[project.urls]
repository = "https://www.github.com/langchain-ai/langchain"

[dependency-groups]
dev = []

