[tool.poetry]
name = "docs"
version = "0.0.0"
description = ""
authors = ["Jacob Lee <jacob@langchain.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nbconvert = "^7.4.0"
nbdoc = "^0.0.82"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
