[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headless-langgraph-e2e"
version = "0.1.0"
description = "Local LangGraph dev server + headless tool demo (create_agent)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
langchain = { path = "../../libs/langchain_v1", editable = true }

[dependency-groups]
dev = ["langgraph-cli[inmem]>=0.4.14"]

[tool.setuptools]
py-modules = ["agent"]
