[tool.poetry]
name = "langchain-basetests"
version = "0.1.0"
description = "Standard tests for LangChain implementations"
authors = ["Erick Friis <erick@langchain.dev>"]
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain"
license = "MIT"

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain/tree/master/libs/basetests"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.1.40"
pytest = ">=7,<9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
